Added list of scheduled restores to UI
