# server/api/schedules/schedule.controller.run.js
@@ -1,0 +1,16 @@
+var jenkins = require('../../../vars').jenkins;
+
+exports.run = function(req, res) {
+  console.log("API::Running scheduled restore")
+  console.log("\tName: " + req.params.scheduleName)
+
+  jenkins.job.build(
+    { name: req.params.scheduleName},
+    function(err) {
+      if (err) throw err;
+      console.log("\tSuccess")
+      res.json("The restoration successfully triggered!")
+    }
+  );
+
+}
